cmake_minimum_required(VERSION 2.8)
project(BlobbyThing_lib)

add_library(
    ${PROJECT_NAME}
    BlobbyThingGame.cpp
    BlobbyThingGame.h
    GraphicsGL.cpp
    GraphicsGL.h
    PhysicsSimulation2D.cpp
    PhysicsSimulation2D.h
    ShaderProgramGL.cpp
    ShaderProgramGL.h
    TextureObject.cpp
    TextureObject.h
    VectorTriangleObject.cpp
    VectorTriangleObject.h
    ErrorLogging.cpp
    ErrorLogging.h
    SDLTextureObject.cpp
    SDLTextureObject.h
    Spline.cpp
    Spline.h
    TextureText.cpp
    TextureText.h
    WavefrontOBJLoader.cpp
    WavefrontOBJLoader.h
    GameLoop.cpp
    GameLoop.h
    MemoryTextureObject.cpp
    MemoryTextureObject.h
    ShadedModelProxy.cpp
    ShadedModelProxy.h
    TextureFont.cpp
    TextureFont.h
    TriangleObject.cpp
    TriangleObject.h
    Exception.h
    Exception.cpp
    StringTools.h
	DecodeUtf8.h
	DecodeUtf8.cpp
)
